--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -8,11 +8,13 @@ dockWindowBehavior=true
 enableKWinEdges=true
 formfactor=2
 immutability=1
+isClonedFrom=-1
 isPreferredForShortcuts=false
-lastScreen=11
+lastScreen=10
 location=4
+maxLength=80
 name=
-onPrimary=false
+onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
@@ -104,7 +106,7 @@ PreloadWeight=0
 
 [Containments][1][Applets][2][Configuration][General]
 isInLatteDock=true
-launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:firefox.desktop,applications:emacs.desktop,applications:jetbrains-idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:net.lutris.Lutris.desktop,applications:hmcl-bin.desktop,applications:org.prismlauncher.PrismLauncher.desktop,file:///usr/share/applications/discord.desktop,applications:qq.desktop,applications:unityhub.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
+launchers59=applications:org.kde.dolphin.desktop,applications:systemsettings.desktop,applications:st.desktop,applications:firefox.desktop,applications:emacs.desktop,applications:jetbrains-idea.desktop,applications:org.gnome.clocks.desktop,applications:steam-native.desktop,applications:net.lutris.Lutris.desktop,applications:org.prismlauncher.PrismLauncher.desktop,file:///usr/share/applications/discord.desktop,applications:qq.desktop,applications:virtualbox.desktop,applications:com.obsproject.Studio.desktop,applications:org.kde.kdenlive.desktop,applications:aegisub.desktop,applications:org.inkscape.Inkscape.desktop,applications:electron-netease-cloud-music.desktop,applications:gimp.desktop,applications:org.kde.krita.desktop,file:///latte-separator1.desktop
 
 [Containments][1][Applets][49]
 immutability=1
@@ -129,6 +131,7 @@ PreloadWeight=0
 
 [Containments][1][General]
 advanced=false
+alignment=0
 alignmentUpgraded=true
 appletOrder=119;2;54;121;122;49
 backgroundAllCorners=true
@@ -161,156 +164,119 @@ type=org.kde.latte.default
 [Containments][1][Indicator][org.kde.latte.default][General]
 activeStyle=Dot
 
-[Containments][15]
-PreloadWeight=0
+[Containments][130]
 activityId=
 formfactor=2
 immutability=1
-lastScreen=11
+lastScreen=-1
 location=3
 plugin=org.kde.plasma.private.systemtray
 popupHeight=432
 popupWidth=432
 wallpaperplugin=org.kde.image
 
-[Containments][15][Applets][118]
-immutability=1
-plugin=org.kde.plasma.manage-inputmethod
-
-[Containments][15][Applets][118][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][123]
+[Containments][130][Applets][131]
 immutability=1
 plugin=org.kde.kscreen
 
-[Containments][15][Applets][123][Configuration]
-PreloadWeight=6
-
-[Containments][15][Applets][124]
+[Containments][130][Applets][132]
 immutability=1
-plugin=org.kde.plasma.mediacontroller_plus
+plugin=org.kde.plasma.manage-inputmethod
 
-[Containments][15][Applets][124][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][125]
-immutability=1
-plugin=org.kde.plasma.mediacontroller
-
-[Containments][15][Applets][125][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][126]
-immutability=1
-plugin=org.kde.plasma.nightcolorcontrol
-
-[Containments][15][Applets][127]
-immutability=1
-plugin=org.kde.plasma.battery
-
-[Containments][15][Applets][128]
-immutability=1
-plugin=org.kde.plasma.networkmanagement
-
-[Containments][15][Applets][129]
-immutability=1
-plugin=org.kde.plasma.bluetooth
-
-[Containments][15][Applets][16]
-immutability=1
-plugin=org.kde.kdeconnect
-
-[Containments][15][Applets][16][Configuration]
-PreloadWeight=5
-
-[Containments][15][Applets][17]
+[Containments][130][Applets][133]
 immutability=1
 plugin=org.kde.plasma.clipboard
 
-[Containments][15][Applets][17][Configuration]
-PreloadWeight=36
-
-[Containments][15][Applets][18]
-immutability=1
-plugin=org.kde.plasma.devicenotifier
-
-[Containments][15][Applets][18][Configuration]
-PreloadWeight=57
-
-[Containments][15][Applets][19]
+[Containments][130][Applets][134]
 immutability=1
 plugin=org.kde.plasma.notifications
 
-[Containments][15][Applets][19][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][19][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][15][Applets][28]
-immutability=1
-plugin=org.kde.plasma.volume
-
-[Containments][15][Applets][28][Configuration]
-PreloadWeight=77
-
-[Containments][15][Applets][28][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][15][Applets][28][Configuration][General]
-migrated=true
-
-[Containments][15][Applets][29]
-immutability=1
-plugin=org.kde.plasma.keyboardindicator
-
-[Containments][15][Applets][29][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][29][Configuration][ConfigDialog]
-DialogHeight=540
-DialogWidth=720
-
-[Containments][15][Applets][29][Configuration][General]
-key=Caps Lock,Num Lock
-
-[Containments][15][Applets][31]
+[Containments][130][Applets][135]
 immutability=1
 plugin=org.kde.plasma.printmanager
 
-[Containments][15][Applets][31][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][32]
+[Containments][130][Applets][136]
 immutability=1
-plugin=org.kde.plasma.vault
+plugin=org.kde.plasma.keyboardindicator
 
-[Containments][15][Applets][32][Configuration]
-PreloadWeight=0
-
-[Containments][15][Applets][70]
+[Containments][130][Applets][137]
 immutability=1
 plugin=org.kde.plasma.keyboardlayout
 
-[Containments][15][Applets][70][Configuration]
+[Containments][130][Applets][138]
+immutability=1
+plugin=org.kde.plasma.vault
+
+[Containments][130][Applets][138][Configuration]
+PreloadWeight=55
+
+[Containments][130][Applets][139]
+immutability=1
+plugin=org.kde.plasma.devicenotifier
+
+[Containments][130][Applets][140]
+immutability=1
+plugin=org.kde.plasma.volume
+
+[Containments][130][Applets][140][Configuration]
+PreloadWeight=55
+
+[Containments][130][Applets][140][Configuration][General]
+migrated=true
+
+[Containments][130][Applets][141]
+immutability=1
+plugin=org.kde.kdeconnect
+
+[Containments][130][Applets][141][Configuration]
+PreloadWeight=100
+
+[Containments][130][Applets][142]
+immutability=1
+plugin=org.kde.plasma.networkmanagement
+
+[Containments][130][Applets][142][Configuration]
+PreloadWeight=60
+
+[Containments][130][Applets][143]
+immutability=1
+plugin=org.kde.plasma.bluetooth
+
+[Containments][130][Applets][144]
+immutability=1
+plugin=org.kde.plasma.nightcolorcontrol
+
+[Containments][130][Applets][145]
+immutability=1
+plugin=org.kde.ktp-contactlist
+
+[Containments][130][Applets][145][Configuration]
+PreloadWeight=60
+
+[Containments][130][Applets][146]
+immutability=1
+plugin=org.kde.plasma.battery
+
+[Containments][130][Applets][146][Configuration]
+PreloadWeight=80
+
+[Containments][130][Applets][147]
+immutability=1
+plugin=org.kde.plasma.mediacontroller
+
+[Containments][130][Applets][147][Configuration]
 PreloadWeight=0
 
-[Containments][15][ConfigDialog]
-DialogHeight=558
-DialogWidth=720
+[Containments][130][Applets][148]
+immutability=1
+plugin=org.kde.plasma.mediacontroller_plus
 
-[Containments][15][Configuration]
-PreloadWeight=2
+[Containments][130][Applets][148][Configuration]
+PreloadWeight=0
 
-[Containments][15][General]
-extraItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod,org.kde.plasma.notifications,org.kde.kscreen
-hiddenItems=KMix,org.kde.plasma.notifications
-knownItems=org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.networkmanagement,org.kde.plasma.mediacontroller,org.kde.plasma.devicenotifier,org.kde.kdeconnect,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.keyboardindicator,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.plasma.mediacontroller_plus,org.kde.plasma.keyboardlayout,org.kde.plasma.manage-inputmethod,org.kde.kscreen
-scaleIconsToFit=true
-shownItems=org.kde.plasma.bluetooth
+[Containments][130][General]
+extraItems=org.kde.plasma.mediacontroller_plus,org.kde.kscreen,org.kde.plasma.manage-inputmethod,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+knownItems=org.kde.plasma.mediacontroller_plus,org.kde.kscreen,org.kde.plasma.manage-inputmethod,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
 
 [Containments][4]
 activityId=
@@ -318,11 +284,13 @@ byPassWM=false
 enableKWinEdges=true
 formfactor=2
 immutability=1
+isClonedFrom=-1
 isPreferredForShortcuts=false
-lastScreen=11
+lastScreen=10
 location=3
+maxLength=100
 name=
-onPrimary=false
+onPrimary=true
 plugin=org.kde.latte.containment
 raiseOnActivityChange=false
 raiseOnDesktopChange=false
@@ -357,15 +325,15 @@ immutability=1
 plugin=org.kde.plasma.systemtray
 
 [Containments][4][Applets][14][Configuration]
-PreloadWeight=87
-SystrayContainmentId=15
+PreloadWeight=100
+SystrayContainmentId=130
 
 [Containments][4][Applets][23]
 immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=52
+PreloadWeight=56
 
 [Containments][4][Applets][8]
 immutability=1
@@ -418,6 +386,7 @@ panelPosition=10
 panelSize=100
 panelTransparency=50
 plasmaBackgroundForPopups=true
+screenEdgeMargin=-1
 shadows=None
 shadowsUpgraded=true
 splitterPosition=3
