--- a/latte/KiteAB - macOS Style.layout.latte
+++ b/latte/KiteAB - macOS Style.layout.latte
@@ -10,7 +10,7 @@ formfactor=2
 immutability=1
 isClonedFrom=-1
 isPreferredForShortcuts=false
-lastScreen=10
+lastScreen=11
 location=4
 maxLength=80
 name=
@@ -219,7 +219,7 @@ immutability=1
 plugin=org.kde.plasma.volume
 
 [Containments][130][Applets][140][Configuration]
-PreloadWeight=55
+PreloadWeight=65
 
 [Containments][130][Applets][140][Configuration][General]
 migrated=true
@@ -236,7 +236,7 @@ immutability=1
 plugin=org.kde.plasma.networkmanagement
 
 [Containments][130][Applets][142][Configuration]
-PreloadWeight=60
+PreloadWeight=70
 
 [Containments][130][Applets][143]
 immutability=1
@@ -275,8 +275,8 @@ plugin=org.kde.plasma.mediacontroller_plus
 PreloadWeight=0
 
 [Containments][130][General]
-extraItems=org.kde.plasma.mediacontroller_plus,org.kde.kscreen,org.kde.plasma.manage-inputmethod,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
-knownItems=org.kde.plasma.mediacontroller_plus,org.kde.kscreen,org.kde.plasma.manage-inputmethod,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.ktp-contactlist,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+extraItems=org.kde.plasma.mediacontroller_plus,org.kde.kscreen,org.kde.plasma.manage-inputmethod,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
+knownItems=org.kde.plasma.mediacontroller_plus,org.kde.kscreen,org.kde.plasma.manage-inputmethod,org.kde.plasma.battery,org.kde.plasma.clipboard,org.kde.plasma.notifications,org.kde.plasma.printmanager,org.kde.plasma.bluetooth,org.kde.plasma.networkmanagement,org.kde.plasma.keyboardindicator,org.kde.plasma.keyboardlayout,org.kde.plasma.mediacontroller,org.kde.plasma.vault,org.kde.plasma.devicenotifier,org.kde.plasma.nightcolorcontrol,org.kde.plasma.volume,org.kde.kdeconnect
 
 [Containments][4]
 activityId=
@@ -286,7 +286,7 @@ formfactor=2
 immutability=1
 isClonedFrom=-1
 isPreferredForShortcuts=false
-lastScreen=10
+lastScreen=11
 location=3
 maxLength=100
 name=
@@ -307,7 +307,7 @@ immutability=1
 plugin=org.kde.plasma.digitalclock
 
 [Containments][4][Applets][12][Configuration]
-PreloadWeight=0
+PreloadWeight=5
 
 [Containments][4][Applets][12][Configuration][Appearance]
 customDateFormat=M-dd
@@ -333,7 +333,7 @@ immutability=1
 plugin=org.kde.plasma.notifications
 
 [Containments][4][Applets][23][Configuration]
-PreloadWeight=56
+PreloadWeight=61
 
 [Containments][4][Applets][8]
 immutability=1
